Change "About me"

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <aside>
       <h2>About Me</h2>
 
-      <p>I am doing the Udacity course.</p>
+      <p>I am doing the Udacity course. I want to learn about Git and Github.</p>
     </aside>
 
     <footer>
